build: extract test config