@@ -1,77 +1,60 @@
 plugins {
     id 'groovy'
-    id 'java-library'
     id 'project-report'
 }
 
 version = projectVersion
 group = 'org.grails'
 
-configurations.testCompileClasspath {
-    exclude module: 'grails-plugin-testing'
-}
-
 dependencies {
-
     implementation platform(project(':grails-bom'))
 
-    api project(':grails-test-suite-base'),
-        project(':grails-plugin-interceptors'),
-        project(':grails-plugin-controllers')
-
-    api "org.apache.tomcat:tomcat-jdbc"
-    api "org.apache.groovy:groovy:$groovyVersion"
-
-    testRuntimeOnly "com.h2database:h2"
-    testRuntimeOnly "org.springframework:spring-aspects"
-    testRuntimeOnly "org.aspectj:aspectjrt", "org.aspectj:aspectjweaver"
-
-    testImplementation project(':grails-plugin-codecs'),
-                project(':grails-plugin-domain-class') ,
-                project(':grails-plugin-url-mappings') ,
-                project(":grails-plugin-datasource"),
-                project(":grails-plugin-services"),
-                project(":grails-plugin-rest"),
-                project(":grails-plugin-i18n"),
-                project(":grails-plugin-databinding"),
-                project(':grails-spring')
-
-    testImplementation "org.grails:grails-datastore-gorm-hibernate5"
     testImplementation project(':grails-async-plugin')
+    testImplementation project(':grails-plugin-codecs')
+    testImplementation project(':grails-plugin-controllers')
+    testImplementation project(':grails-plugin-databinding')
+    testImplementation project(':grails-plugin-datasource')
+    testImplementation project(':grails-plugin-domain-class')
+    testImplementation project(':grails-plugin-i18n')
+    testImplementation project(':grails-plugin-interceptors')
+    testImplementation project(':grails-plugin-rest')
+    testImplementation project(':grails-plugin-services')
+    testImplementation project(':grails-plugin-url-mappings')
+    testImplementation project(':grails-spring')
+    testImplementation project(':grails-test-suite-base')
+    testImplementation project(':grails-testing-support')
+    testImplementation 'org.apache.groovy:groovy'
+    testImplementation 'org.apache.groovy:groovy-test-junit5'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
+    testImplementation 'org.grails:grails-datastore-gorm-hibernate5'
     testImplementation "org.grails.plugins:gsp"
-    testImplementation "org.grails:grails-gorm-testing-support"
-    testImplementation "org.grails:grails-web-testing-support", {
+    testImplementation 'org.grails:grails-gorm-testing-support', {
+        // This is a local project dependency
         exclude module:'grails-testing-support'
     }
-    testImplementation project(':grails-testing-support')
+    testImplementation 'org.grails:grails-web-testing-support', {
+        // This is a local project dependency
+        exclude module:'grails-testing-support'
+    }
+    testImplementation 'org.objenesis:objenesis'
 
-    testImplementation "com.fasterxml.jackson.core:jackson-databind"
-
-    compileOnly 'jakarta.servlet:jakarta.servlet-api'
-    compileOnly 'org.springframework:spring-test', {
+    testCompileOnly 'jakarta.servlet:jakarta.servlet-api'
+    testCompileOnly 'org.springframework:spring-test', {
         // MockHttpServletRequest/Response/Context used in many classes
     }
 
-    testImplementation 'com.h2database:h2'
-    testImplementation 'jakarta.servlet:jakarta.servlet-api'
-    testImplementation 'org.springframework:spring-test'
-
-    testImplementation 'org.apache.groovy:groovy-test-junit5'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api'
-    testImplementation 'org.junit.platform:junit-platform-runner'
-
+    testRuntimeOnly 'com.h2database:h2'
+    testRuntimeOnly 'org.apache.tomcat:tomcat-jdbc'
+    testRuntimeOnly 'org.aspectj:aspectjrt'
+    testRuntimeOnly 'org.aspectj:aspectjweaver'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testRuntimeOnly 'org.springframework:spring-aspects'
 
-    // Logging
-    api 'org.slf4j:slf4j-api'
-    api 'org.slf4j:jcl-over-slf4j'
 
     // Testing
-    testImplementation 'org.slf4j:slf4j-simple'
     testImplementation('org.spockframework:spock-core') { transitive = false }
     // Required by Spock's Mocking
     testRuntimeOnly 'net.bytebuddy:byte-buddy'
-    testImplementation 'org.objenesis:objenesis'
 }
 
 def isolatedTestPatterns = [
@@ -97,23 +80,6 @@ def isolatedTestPatterns = [
     ]
 ]
 
-tasks.withType(Test).configureEach {
-    maxParallelForks = isCiBuild ? 2 : 4
-    forkEvery = isCiBuild ? 25 : 100
-    if(!isCiBuild) {
-        maxHeapSize = '1024m'
-    }
-}
-
-tasks.named('test', Test) {
-    filter.excludePatterns = isolatedTestPatterns.values().flatten()
-    dependsOn(provider {
-        tasks.findAll({
-            isolatedTestPatterns.containsKey(it.name)
-        })
-    })
-}
-
 isolatedTestPatterns.keySet().each { taskName ->
     tasks.register(taskName, Test) {
         group = 'verification'
@@ -124,6 +90,23 @@ isolatedTestPatterns.keySet().each { taskName ->
 tasks.named('isolatedTestsTwo', Test) {
     maxParallelForks = 1
     forkEvery = 100
+}
+
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
+    maxParallelForks = isCiBuild ? 2 : Runtime.runtime.availableProcessors() * 3/4 as int ?: 1
+    forkEvery = isCiBuild ? 25 : 100
+    maxHeapSize = isCiBuild ? '768m' : '1024m'
+    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED')
+}
+
+tasks.named('test', Test) {
+    filter.excludePatterns = isolatedTestPatterns.values().flatten()
+    dependsOn(provider {
+        tasks.findAll({
+            isolatedTestPatterns.containsKey(it.name)
+        })
+    })
 }
 
 apply {
